# webapp-lib

./: CODEOWNERS  Cargo.toml  README.md
docs/: best-practices.md  endpoint-design-options.md
src/: lib.rs
src/auth/: mod.rs
src/components/: auth.rs  autocomplete.rs  mod.rs
src/http/: mod.rs
src/reactive/: mod.rs
src/storage/: mod.rs
src/theme/: mod.rs
style/: base.css  icons.css  loading.css  vars.css
