[package]
name = "webapp-lib"
version = "0.2.3"
edition = "2024"

[features]
default = []
http = [
    "dep:web-sys",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:serde",
    "dep:serde_json",
]
storage = [
    "dep:web-sys",
    "dep:wasm-bindgen",
    "dep:serde",
    "dep:serde_json",
]
reactive = [
    "http",
    "storage",
    "dep:leptos",
    "dep:leptos_router",
]
theme = [
    "dep:web-sys",
    "dep:wasm-bindgen",
]
components = [
    "reactive",
    "theme",
]
auth = [
    "components",
    "dep:leptos-use",
]

[dependencies]
ferrox-traits = { git = "https://github.com/rbenitez22/ferrox-traits", tag = "v0.1.0" }
ferrox-webapp-macros = { git = "https://github.com/rbenitez22/ferrox-webapp-macros", tag = "v0.1.0" }
leptos        = { version = "0.8.14", features = ["csr"], optional = true }
leptos-use    = { version = "0.16.3", optional = true }
leptos_router = { version = "0.8.10", optional = true }
serde         = { version = "1.0", features = ["derive"], optional = true }
serde_json    = { version = "1.0", optional = true }
wasm-bindgen          = { version = "0.2.106", optional = true }
wasm-bindgen-futures  = { version = "0.4.56", optional = true }
js-sys        = { version = "0.3.83", optional = true }

[dependencies.web-sys]
version  = "0.3.83"
optional = true
features = [
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "Storage",
    "CustomEvent",
    "CustomEventInit",
    "History",
    "HtmlElement",
    "HtmlFormElement",
    "HtmlDialogElement",
    "HtmlInputElement",
    "EventTarget",
    "Document",
    "Element",
    "Node",
    "HtmlHeadElement",
]
